[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/ShapeGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Field.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Input.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 400 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 216, 8 )

[node name="Field" type="Node2D"]
script = ExtResource( 2 )

[node name="ShapeGenerator" parent="." instance=ExtResource( 1 )]

[node name="CurrentShape" type="Node2D" parent="."]

[node name="PlacedShapes" type="Node2D" parent="."]

[node name="LeftWall" type="KinematicBody2D" parent="."]
position = Vector2( -8, 392 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="RightWall" type="KinematicBody2D" parent="."]
position = Vector2( 408, 392 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Floor" type="KinematicBody2D" parent="."]
position = Vector2( 200, 808 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 2 )

[node name="Input" parent="." instance=ExtResource( 3 )]

[connection signal="shape_drop" from="ShapeGenerator" to="." method="_on_ShapeGenerator_shape_drop"]
[connection signal="Drop" from="Input" to="." method="_on_Input_Drop"]
[connection signal="DropStopped" from="Input" to="." method="_on_Input_DropStopped"]
[connection signal="MoveLeft" from="Input" to="." method="_on_Input_MoveLeft"]
[connection signal="MoveRight" from="Input" to="." method="_on_Input_MoveRight"]
[connection signal="RotateLeft" from="Input" to="." method="_on_Input_RotateLeft"]
[connection signal="RotateRight" from="Input" to="." method="_on_Input_RotateRight"]
